# BetterScrobbler

./: CMakeLists.txt  README.md
config/: patterns.json
formula/: scrobbler.rb
header/: CommandLine.h  Config.h  Credentials.h  Helper.h  LastFmScrobbler.h  Logger.h  MediaRemote.h  UrlUtils.h
include/: CommandLine.h  Config.h  Credentials.h  Helper.h  LastFmScrobbler.h  Logger.h  LyricsManager.h  MediaRemote.h  TrackManager.h  UrlUtils.h
src/: CommandLine.h  Config.h  Config.mm  Credentials.h  Credentials.mm  Helper.h  Helper.mm  LastFmScrobbler.h  LastFmScrobbler.mm  LyricsManager.mm  MediaRemote.mm  TrackManager.mm  UrlUtils.mm  main.mm
